Fix multi-flex-relate truncation on selected items

--- a/core/app/shell/src/themes/suite8/css/fields/_multi-flex-relate.scss
+++ b/core/app/shell/src/themes/suite8/css/fields/_multi-flex-relate.scss
@@ -73,7 +73,6 @@
   }
 
   .multi-flex-relate-selected-entry {
-    width: 100%;
     table-layout: fixed;
     white-space: nowrap;
     overflow: hidden;
